@@ -4,9 +4,12 @@ noinst_LTLIBRARIES = libsimplify.la
 
 INCLUDES = -I$(top_srcdir)/source/headers 
 
+
 libsimplify_la_SOURCES = \
 	DouglasPeuckerLineSimplifier.cpp \
-	DouglasPeuckerSimplifier.cpp
+	DouglasPeuckerSimplifier.cpp \
+	TaggedLineSegment.cpp \
+	TaggedLineString.cpp
 
 libsimplify_la_LIBADD = 
 
